[Yashpal] Added few more resources.

--- a/widgets/smsmagicwidget/app/widget.html
+++ b/widgets/smsmagicwidget/app/widget.html
@@ -4,28 +4,14 @@
 <head>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
   </script>
-  <script src="../app/js/ZohoEmbededAppSDK-1.0.5.min.js"></script>
-  <script src="../app/js/sendEmail.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../app/css/sendEmail.css" rel="stylesheet">
-  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet"
-    type="text/css" />
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="js/jquery-min.js"></script>
+  <script src="js/zoho_embeded_app_sdk.min.js"></script>
+  <script src="js/sendsms_jq.js"></script>
+  <link href="css/sendsms.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="loader"></div>
-
   <div id="Error" class="overlay">
     <div class="text" id="ErrorText"> </div>
     <div id="dateTime" class="dateTime">
@@ -55,7 +41,6 @@
     </div>
 
     <div id="contentDiv" class="mappingDiv">
-
       <div id="emailEditorsEmail">
         <div id="emailEditorEmail">
           <div class="insert">
@@ -91,5 +76,4 @@
     </div>
   </div>
 </body>
-
 </html>
