--- a/widgets/smsmagicwidget/app/hello.html
+++ b/widgets/smsmagicwidget/app/hello.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="css/sendsms.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
@@ -17,41 +18,53 @@
   <script src="js/script.js"></script>
 </head>
 
-<body>
+<body class="loading">
   <div class="container">
     <div class="card rounded-0">
-      <h5 class="card-header bg-warning">Send Message</h5>
+      <h5 class="card-header">Send Message</h5>
       <div class="card-body">
         <form>
+
           <div class="form-group">
-            <div class="btn-group">
-              <button class="btn btn-light dropdown-toggle rounded-0" type="button" id="sms-sender_ids"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Choose sender id
-              </button>
-              <div id="drop-1" class="dropdown-menu col-xs-12" aria-labelledby="sms-sender_ids">
-                <a class="dropdown-item sender-id-item" href="#">145784754854</a>
-                <a class="dropdown-item sender-id-item" href="#">121323123213</a>
-                <a class="dropdown-item sender-id-item" href="#">123423423432</a>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0" id="sms-sender_ids" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Sender Id<span class="invisible">,,,</span>
+                </button>
+                <div class="dropdown-menu rounded-0" aria-labelledby="sms-sender_ids">
+                  <a class="dropdown-item sender-id-item" href="#">145784754854</a>
+                  <a class="dropdown-item sender-id-item" href="#">121323123213</a>
+                  <a class="dropdown-item sender-id-item" href="#">123423423432</a>
+                </div>
               </div>
+              <input type="text" id="selected-sender-id" class="form-control rounded-0" aria-label="Text input with segmented dropdown button" readonly>
             </div>
-            <div class="btn-group">
-              <button class="btn btn-light dropdown-toggle rounded-0" type="button" id="sms-templates"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Choose message template
-              </button>
-              <div id="drop-1" class="dropdown-menu col-xs-12" aria-labelledby="sms-templates">
-                <a class="dropdown-item template-item" href="#">Action</a>
-                <a class="dropdown-item template-item" href="#">Another action</a>
-                <a class="dropdown-item template-item" href="#">Something else here</a>
+          </div>
+
+          <div class="form-group">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Template<span class="invisible">__,</span>
+                </button>
+                <div class="dropdown-menu rounded-0" aria-labelledby="sms-templates">
+                  <a class="dropdown-item template-item" href="#">Welcome Message</a>
+                  <a class="dropdown-item template-item" href="#">Event Euro2020 Promotion</a>
+                  <a class="dropdown-item template-item" href="#">Event Reminder</a>
+                  <a class="dropdown-item template-item" href="#">New Offer</a>
+                </div>
               </div>
+              <input type="text" id="selected-template" class="form-control rounded-0" aria-label="Text input with segmented dropdown button" readonly>
             </div>
-            <div class="btn-group">
-              <button class="btn btn-light dropdown-toggle rounded-0" type="button" id="sms-fields"
+          </div>
+
+          <div class="form-group">
+            <div class="btn-group float-right">
+              <button class="btn btn-info dropdown-toggle rounded-0" type="button" id="sms-fields"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Insert record's field
               </button>
-              <div id="drop-2" class="dropdown-menu" aria-labelledby="sms-fields">
+              <div id="drop-2" class="dropdown-menu rounded-0" aria-labelledby="sms-fields">
                 <a class="dropdown-item record-field-item" href="#">First name</a>
                 <a class="dropdown-item record-field-item" href="#">Last Name</a>
                 <a class="dropdown-item record-field-item" href="#">Phone</a>
@@ -60,29 +73,18 @@
             </div>
           </div>
           <div class="form-group">
-                <div class="input-group input-group-sm mb-3">
-                  <div class="input-group-prepend  rounded-0">
-                    <span class="input-group-text  rounded-0" id="inputGroup-sizing-sm">Sender Id</span>
-                  </div>
-                  <input type="text" id="selected-sender-id" class="form-control  rounded-0" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                </div>
-                <div class="input-group input-group-sm mb-3">
-                    <div class="input-group-prepend  rounded-0">
-                      <span class="input-group-text  rounded-0" id="inputGroup-sizing-sm">Template</span>
-                    </div>
-                    <input type="text" id="selected-template" class="form-control  rounded-0" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-                </div>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control rounded-0" id="message-text" placeholder="Type you message here" rows="10"></textarea>
-          </div>
-          <div class="form-group text-right">
-            <button type="submit" class="btn btn-primary btn-lg rounded-0">Submit</button>
+            <textarea class="form-control rounded-0" id="message-text" placeholder="Type you message here"
+              rows="10"></textarea>
           </div>
         </form>
       </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-secondary rounded-0" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-info rounded-0" >Send message</button>
+      </div>
     </div>
   </div>
+  <div class="modal"></div>
 </body>
 
 </html>
