--- a/widgets/smsmagicwidget/app/hello.html
+++ b/widgets/smsmagicwidget/app/hello.html
@@ -20,11 +20,13 @@
 
 <body class="loading">
   <div class="container">
+    <form>
     <div class="card rounded-0">
       <h5 class="card-header">Send Message</h5>
+      <div class="progress rounded-0" style="height: 5px;">
+          <div class="progress-bar bg-warning rounded-0" id="progress-bar" role="progressbar" style="width: 2%;" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
       <div class="card-body">
-        <form>
-
           <div class="form-group">
             <div class="input-group mb-3">
               <div class="input-group-prepend">
@@ -37,7 +39,7 @@
                   <a class="dropdown-item sender-id-item" href="#">123423423432</a>
                 </div>
               </div>
-              <input type="text" id="selected-sender-id" class="form-control rounded-0" aria-label="Text input with segmented dropdown button" readonly>
+              <input type="text" id="selected-sender-id" class="form-control no-focus rounded-0" aria-label="Text input with segmented dropdown button" readonly>
             </div>
           </div>
 
@@ -54,7 +56,7 @@
                   <a class="dropdown-item template-item" href="#">New Offer</a>
                 </div>
               </div>
-              <input type="text" id="selected-template" class="form-control rounded-0" aria-label="Text input with segmented dropdown button" readonly>
+              <input type="text" id="selected-template" class="form-control no-focus rounded-0" aria-label="Text input with segmented dropdown button" readonly>
             </div>
           </div>
 
@@ -74,15 +76,16 @@
           </div>
           <div class="form-group">
             <textarea class="form-control rounded-0" id="message-text" placeholder="Type you message here"
-              rows="10"></textarea>
+              rows="10" required></textarea>
           </div>
-        </form>
       </div>
       <div class="modal-footer">
           <button type="button" class="btn btn-secondary rounded-0" data-dismiss="modal">Cancel</button>
+          <button id="reset-form" type="reset" class="btn btn-warning rounded-0" >Reset</button>
           <button type="button" class="btn btn-info rounded-0" >Send message</button>
       </div>
     </div>
+  </form>
   </div>
   <div class="modal"></div>
 </body>
