--- a/widgets/smsmagicwidget/app/hello.html
+++ b/widgets/smsmagicwidget/app/hello.html
@@ -24,7 +24,7 @@
     <div class="card rounded-0">
       <h5 class="card-header">Send Message</h5>
       <div class="progress rounded-0" style="height: 5px;">
-          <div class="progress-bar bg-warning rounded-0" id="progress-bar" role="progressbar" style="width: 2%;" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar bg-primary rounded-0" id="progress-bar" role="progressbar" style="width: 2%;" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <div class="card-body">
           <div class="form-group">
