--- a/widgets/smsmagicwidget/app/widget.html
+++ b/widgets/smsmagicwidget/app/widget.html
@@ -1,79 +1,115 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-  </script>
-  <script src="js/jquery-min.js"></script>
-  <script src="js/zoho_embeded_app_sdk.min.js"></script>
-  <script src="js/sendsms_jq.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="css/sendsms.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+  </script>
+  <script src="js/ZohoEmbededAppSDK.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/bulksms.js"></script>
 </head>
 
-<body>
-  <div id="loader"></div>
-  <div id="Error" class="overlay">
-    <div class="text" id="ErrorText"> </div>
-    <div id="dateTime" class="dateTime">
-      <div class="scheduleIcon material-icons">schedule</div>
-      <input type="text" id="datepicker" />
-      <div class="timings">
-        <select style="width:105px;height:36px;background-color:white;margin-left:15px;" id="timeList">
-        </select>
+<body class="loading">
+  <form>
+    <div class="card rounded-0">
+      <div class="progress rounded-0" style="height: 5px;">
+        <div class="progress-bar bg-primary rounded-0" id="progress-bar" role="progressbar" style="width: 2%;"
+          aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
-      <div class="scheduleClose send" onclick="scheduleClose()">Schedule</div>
-      <div class="scheduleClose cancel" onclick="cancel()">Cancel</div>
-    </div>
-  </div>
-
-  </div>
-  <div id="emailer">
-    <div class="template" style="margin-top:10px;margin-left:40px;">
-      <div class="dropdown">
-        <button type="button" style="float:left;border:1px solid grey;background-color:white;"
-          data-toggle="dropdown"><span style="float:left;" class="choose" id="selectedTemplate"> Choose Template</span>
-          <span class="arrowIcon"></span>
-        </button>
-        <ul class="dropdown-menu" id="templateList" style="max-width:185px;min-width:185px;">
-        </ul>
-        <span class="tooltiptext" id="tooltiptext">Choose Template</span>
-      </div>
-    </div>
-
-    <div id="contentDiv" class="mappingDiv">
-      <div id="emailEditorsEmail">
-        <div id="emailEditorEmail">
-          <div class="insert">
-            <div style="float:left;">Message</div>
-            <div style="float:right;min-height:30px;padding-left:10px;margin-right:7px;" class="dropdown dropdown  ">
-              <button id="moduleFields" class="btnn dropdown-toggle" style="width:188px;" type="button"
-                data-toggle="dropdown">Insert Contact Fields
-                <span class="caret"></span></button>
-              <ul class="dropdown-menu" style="max-width:190px;min-width:190px;" id="dropdown-menu-email">
-              </ul>
+      <div class="card-body">
+        <div class="form-group">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0" id="sender_ids"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sender Id<span class="invisible">,,,</span>
+              </button>
+              <div class="dropdown-menu rounded-0" aria-labelledby="sender_ids">
+                <a class="dropdown-item sender-ids-item" href="#">145784754854</a>
+                <a class="dropdown-item sender-ids-item" href="#">121323123213</a>
+                <a class="dropdown-item sender-ids-item" href="#">123423423432</a>
+              </div>
             </div>
-            <div style="float:right;min-height:30px;padding-left:10px;" class="dropdown dropdown  ">
-              <button class="btnn dropdown-toggle" type="button" data-toggle="dropdown">Insert User Fields
-                <span class="caret"></span></button>
-              <ul class="dropdown-menu" id="dropdown-menu-user">
-              </ul>
+            <input type="text" id="selected-sender-id" class="form-control no-focus rounded-0"
+              aria-label="Text input with segmented dropdown button" readonly>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Template<span class="invisible">__,</span>
+              </button>
+              <div class="dropdown-menu rounded-0" aria-labelledby="sms-templates">
+                <a class="dropdown-item sms-templates-item" data-value="12345678" href="#">Welcome Message</a>
+                <a class="dropdown-item sms-templates-item" data-value="12345679" href="#">Event Euro2020
+                  Promotion</a>
+                <a class="dropdown-item sms-templates-item" data-value="12345690" href="#">Event Reminder</a>
+                <a class="dropdown-item sms-templates-item" data-value="12345623" href="#">New Offer</a>
+              </div>
+            </div>
+            <input type="text" id="selected-template" class="form-control no-focus rounded-0"
+              aria-label="Text input with segmented dropdown button" readonly>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="btn-group float-right">
+            <button class="btn btn-info dropdown-toggle rounded-0" type="button" id="sms-fields" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false" data-boundary="scrollParent">
+              Insert record's field
+            </button>
+            <div id="record-fields" class="dropdown-menu rounded-0" aria-labelledby="sms-fields">
+              <a class="dropdown-item record-fields-item" href="#">First name</a>
+              <a class="dropdown-item record-fields-item" href="#">Last Name</a>
+              <a class="dropdown-item record-fields-item" href="#">Phone</a>
+              <a class="dropdown-item record-fields-item" href="#">Email</a>
             </div>
           </div>
-          <div class="editable notranslate" contenteditable="true" id="emailContentEmail" onmouseup="openlink()"></div>
+        </div>
+        <div class="form-group">
+          <textarea class="form-control rounded-0" id="message-text" placeholder="Type you message here" rows="10"
+            required></textarea>
         </div>
       </div>
-      <div class="footer">
-        <div class="send" style="margin-top:5px;" id="send" onClick="sendSMS()">
-          Send
-        </div>
-        <div class="scheduleCheck" style="margin-top:5px;"><input type="checkbox" id="scheduleCheck"
-            style="font-size:30px;cursor: pointer;" onchange="enableSchedule(this)"></div>
-        <div class="schedule" id="dateTimeText" style="margin-top:5px;">
-          Schedule on <span class="dateTimeText" style="color:blue;cursor:pointer;" id="scheduledDateTime"
-            onclick="openDatePicker()"></span>
-        </div>
+      <div class="modal-footer" style="border-top: 0px;">
+        <button type="button" class="btn btn-secondary rounded-0" data-dismiss="modal">Cancel</button>
+        <button id="reset-form" type="reset" class="btn btn-warning rounded-0">Reset</button>
+        <button type="button" class="btn btn-info rounded-0">Send message</button>
       </div>
     </div>
+  </form>
+  <div id="value-cache" class="invisible" style="display: none;">
+    <input id="12345678" type="text" value="Hi ${First_Name}, How was you trip to Europe?" />
+    <input id="12345679" type="text" value="Hello Mr. ${Last_name}, How was you trip to Europe?" />
+    <textarea id="12345690">Hi ${firstname},
+how is your vacation?
+Regards,
+Neemchand
+    </textarea>
+    <input id="12345691" type="text" value="Hi \ How was you trip to USA?" />
+    <input id="12345623" type="text" value="Hi ${First_Name}, You are making progress.?" />
   </div>
+  <div class="modal"></div>
+
+  <script type="text/javascript">
+    $(document).ready(function () {
+      initializeWidget();
+    })
+  </script>
 </body>
+
 </html>
