--- a/widgets/smsmagicwidget/app/widget.html
+++ b/widgets/smsmagicwidget/app/widget.html
@@ -24,21 +24,19 @@
   <form>
     <div class="card rounded-0">
       <div class="progress rounded-0" style="height: 5px;">
-        <div class="progress-bar bg-primary rounded-0" id="progress-bar" role="progressbar" style="width: 2%;"
+        <div class="progress-bar bg-warning rounded-0" id="progress-bar" role="progressbar" style="width: 2%;"
           aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
       <div class="card-body">
         <div class="form-group">
           <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0" id="sender_ids"
+              <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0" id="sender-ids-drop"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Sender Id<span class="invisible">,,,</span>
               </button>
-              <div class="dropdown-menu rounded-0" aria-labelledby="sender_ids">
-                <a class="dropdown-item sender-ids-item" href="#">145784754854</a>
-                <a class="dropdown-item sender-ids-item" href="#">121323123213</a>
-                <a class="dropdown-item sender-ids-item" href="#">123423423432</a>
+              <div id="sms-sender-ids" class="dropdown-menu rounded-0" aria-labelledby="sender-ids-drop">
+                <!-- <a class="dropdown-item sender-ids-item" href="#">145784754854</a> -->
               </div>
             </div>
             <input type="text" id="selected-sender-id" class="form-control no-focus rounded-0"
@@ -50,15 +48,11 @@
           <div class="input-group mb-3">
             <div class="input-group-prepend">
               <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split rounded-0"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="sms-templates-drop">
                 Template<span class="invisible">__,</span>
               </button>
-              <div class="dropdown-menu rounded-0" aria-labelledby="sms-templates">
-                <a class="dropdown-item sms-templates-item" data-value="12345678" href="#">Welcome Message</a>
-                <a class="dropdown-item sms-templates-item" data-value="12345679" href="#">Event Euro2020
-                  Promotion</a>
-                <a class="dropdown-item sms-templates-item" data-value="12345690" href="#">Event Reminder</a>
-                <a class="dropdown-item sms-templates-item" data-value="12345623" href="#">New Offer</a>
+              <div id="sms-templates" class="dropdown-menu rounded-0" aria-labelledby="sms-templates-drop">
+                <!-- <a class="dropdown-item sms-templates-item" data-value="12345678" href="#">Welcome Message</a> -->
               </div>
             </div>
             <input type="text" id="selected-template" class="form-control no-focus rounded-0"
@@ -73,36 +67,23 @@
               Insert record's field
             </button>
             <div id="record-fields" class="dropdown-menu rounded-0" aria-labelledby="sms-fields">
-              <a class="dropdown-item record-fields-item" href="#">First name</a>
-              <a class="dropdown-item record-fields-item" href="#">Last Name</a>
-              <a class="dropdown-item record-fields-item" href="#">Phone</a>
-              <a class="dropdown-item record-fields-item" href="#">Email</a>
+              <!-- <a class="dropdown-item record-fields-item" href="#">First name</a> -->
             </div>
           </div>
         </div>
         <div class="form-group">
-          <textarea class="form-control rounded-0" id="message-text" placeholder="Type you message here" rows="10"
+          <textarea class="form-control rounded-0" id="message-text" placeholder="Type you message here" rows="5"
             required></textarea>
         </div>
       </div>
       <div class="modal-footer" style="border-top: 0px;">
-        <button type="button" class="btn btn-secondary rounded-0" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-secondary rounded-0" onclick="closePopUp(false)">Cancel</button>
         <button id="reset-form" type="reset" class="btn btn-warning rounded-0">Reset</button>
         <button type="button" class="btn btn-info rounded-0">Send message</button>
       </div>
     </div>
   </form>
-  <div id="value-cache" class="invisible" style="display: none;">
-    <input id="12345678" type="text" value="Hi ${First_Name}, How was you trip to Europe?" />
-    <input id="12345679" type="text" value="Hello Mr. ${Last_name}, How was you trip to Europe?" />
-    <textarea id="12345690">Hi ${firstname},
-how is your vacation?
-Regards,
-Neemchand
-    </textarea>
-    <input id="12345691" type="text" value="Hi \ How was you trip to USA?" />
-    <input id="12345623" type="text" value="Hi ${First_Name}, You are making progress.?" />
-  </div>
+  <div id="value-cache" class="invisible" style="display: none;"></div>
   <div class="modal"></div>
 
   <script type="text/javascript">
