[Yashpal] Added Select2.

--- a/widgets/YAMessenger/app/widget.html
+++ b/widgets/YAMessenger/app/widget.html
@@ -5,120 +5,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
   <link href="css/sendsms.css" rel="stylesheet">
+
   <script src="https://kit.fontawesome.com/caf7cb58ce.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+  <script src="js/jquery-dateformat.min.js"></script>
+  <!-- 'MM/dd/yyyy HH:mm:ss a' -->
   <script src="js/ZohoEmbededAppSDK.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/bulksms.js"></script>
   <script src="js/smscount.js"></script>
 </head>
+
 <body class="loading">
+  <div class="progress rounded-0" style="height: 5px;">
+    <div class="progress-bar bg-success rounded-0" id="progress-bar" role="progressbar" style="width: 100%;"
+      aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
   <form id="message-form">
     <div class="card border-bottom-0 rounded-0">
-      <div class="progress rounded-0" style="height: 5px;">
-        <div class="progress-bar bg-warning rounded-0" id="progress-bar" role="progressbar" style="width: 100%;"
-          aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
       <div class="card-body">
-        <div class="form-group">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split rounded-0"
-                id="sender-ids-drop" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sender Id<span class="invisible">,,,</span>
-              </button>
-              <div id="sms-sender-ids" class="dropdown-menu rounded-0" aria-labelledby="sender-ids-drop">
-                <!-- <a class="dropdown-item sender-ids-item" href="#">145784754854</a> -->
-              </div>
+        <div class="form-row">
+          <label class="col-6 ya-color" for="sms-sender-ids">
+            Sender Id:<br>
+            <select style="width: 100%" class="rounded-0" id="sms-sender-ids" name="Sender Ids">
+              <option></option>
+            </select>
+          </label>
+          <label class="col-6 ya-color" for="sms-templates">
+            Template:<br>
+            <select style="width: 100%" class="rounded-0" id="sms-templates" name="SMS Templates">
+              <option></option>
+            </select>
+          </label>
+        </div>
+        <br>
+        <div class="form-row">
+          <label class="col-6 ya-color" for="phone-fields">
+            Phone Field:<br>
+            <select style="width: 100%" class="rounded-0" id="phone-fields" name="Phone Field">
+              <option></option>
+            </select>
+          </label>
+          <label class="col-6 ya-color" for="record-fields">
+            Merge fields:
+            <select style="width: 100%" class="rounded-0" id="record-fields" name="MergeFiels[]"
+              multiple="multiple"></select>
+          </label>
+        </div>
+        <br>
+        <div class="form-row">
+          <div class="col-12">
+            <textarea class="form-control bg-light rounded-0" id="message-text" placeholder="Type you message here"
+              rows="8" required></textarea>
+            <div id="text-active" class="spinner-grow text-primary spinner-grow-sm invisible" role="status">
+              <span class="sr-only">Loading...</span>
             </div>
-            <input type="text" id="selected-sender-id" class="form-control no-focus rounded-0"
-              aria-label="Text input with segmented dropdown button" readonly>
+            <small><b id="smsCount"></b> SMS (<b id="smsLength"></b>)</small>
           </div>
         </div>
 
-        <div class="form-group">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split rounded-0"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="sms-templates-drop">
-                Template<span class="invisible">__,</span>
-              </button>
-              <div id="sms-templates" class="dropdown-menu rounded-0" aria-labelledby="sms-templates-drop">
-                <!-- <a class="dropdown-item sms-templates-item" data-value="12345678" href="#">Welcome Message</a> -->
-              </div>
-            </div>
-            <input type="text" id="selected-template" class="form-control no-focus rounded-0"
-              aria-label="Text input with segmented dropdown button" readonly>
-          </div>
+        <div class="form-group invisible">
+          Account Id: <span id="account-id" class="badge badge-info rounded-0">80019040</span>
+          API Key: <span id="apikey" class="badge badge-info rounded-0">2dc1579106b1a657080cc51c7efca7e5</span>
         </div>
-
-        <div class="form-group">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split rounded-0"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="phone-fields-drop">
-                Phone Field
-              </button>
-              <div id="phone-fields" class="dropdown-menu rounded-0" aria-labelledby="phone-fields-drop">
-                <!-- <a class="dropdown-item sms-templates-item" data-value="12345678" href="#">Welcome Message</a> -->
-              </div>
-            </div>
-            <input type="text" id="selected-phone-field" class="form-control no-focus rounded-0"
-              aria-label="Text input with segmented dropdown button" readonly>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="btn-group float-right">
-            <button class="btn btn-secondary dropdown-toggle rounded-0" type="button" id="sms-fields"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-boundary="scrollParent">
-              Insert record's field
-            </button>
-            <div id="record-fields" class="dropdown-menu rounded-0" aria-labelledby="sms-fields">
-              <!-- <a class="dropdown-item record-fields-item" href="#">First name</a> -->
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <textarea class="form-control bg-light rounded-0" id="message-text" placeholder="Type you message here"
-            rows="7" required></textarea>
-          <small><b id="smsCount"></b> SMS (<b id="smsLength"></b>) Characters left</small>
-        </div>
-        <div class="form-group"></div>
-        Account Id: <span id="account-id" class="badge badge-info rounded-0">80019040</span>
-        API Key: <span id="apikey" class="badge badge-info rounded-0">2dc1579106b1a657080cc51c7efca7e5</span>
       </div>
-    </div>
-    <div class="modal-footer" style="border-top: 0px;">
-      <button type="button" class="btn btn-outline-secondary rounded-0" onclick="closePopUp(false)">Cancel</button>
-      <!-- <button id="reset-form" type="reset" class="btn btn-outline-secondary rounded-0">Reset</button> -->
-      <button id="preview-message" class="btn btn-outline-secondary rounded-0">Preview</button>
-      <button type="submit" class="btn btn-success rounded-0">Send <i class="fas fa-angle-right"></i></button>
-    </div>
+      <div class="modal-footer" style="border-top: 0px;">
+        <button type="button" class="btn btn-outline-secondary rounded-0" onclick="closePopUp(false)">Cancel</button>
+        <!-- <button id="reset-form" type="reset" class="btn btn-outline-secondary rounded-0">Reset</button> -->
+        <button id="preview-message" class="btn btn-outline-secondary rounded-0">Preview</button>
+        <button type="submit" class="btn btn-success rounded-0">Send <i class="fas fa-angle-right"></i></button>
+      </div>
     </div>
   </form>
   <div id="value-cache" class="invisible" style="display: none;"></div>
   <div class="modal_spinner"></div>
-  <div class="modal fade" id="preview-modal" tabindex="-1" role="dialog" aria-labelledby="preview-modal-title" aria-hidden="true">
+  <div class="modal fade" id="preview-modal" tabindex="-1" role="dialog" aria-labelledby="preview-modal-title"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="padding: .5rem .5rem;">
+          Preview
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body" style="background: darkslategrey; height: 340px; overflow-y: auto;">
-            <div class="chat">
-                <P id="preview-text" class="text-no-wrap">You text preview will <br>be seen here</p>
-            </div>
-         </div>
+          <div class="chat">
+            <P id="preview-text" class="text-no-wrap">You text preview will <br>be seen here</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -126,6 +107,29 @@
     $(document).ready(function () {
       initializeWidget();
       $('#message-text').smsArea();
+      $('#sms-sender-ids').select2({
+        placeholder: "Select a sender id"
+      });
+      $('#sms-templates').select2({
+        placeholder: "Select a text template"
+      });
+      $('#phone-fields').select2({
+        placeholder: "Select phone field"
+      });
+      $('#record-fields').select2({
+        placeholder: "Select merge field",
+        allowClear: true
+      }).on('select2:unselecting', function () {
+        $(this).data('unselecting', true);
+      }).on('select2:opening', function (e) {
+        if ($(this).data('unselecting')) {
+          $(this).removeData('unselecting');
+          e.preventDefault();
+        }
+      });
+      $('b[role="presentation"]').hide();
+      $('.select2-selection__arrow').append(
+        '<span style="color: gray;font-size: 12px;"><i class="fa fa-angle-down"></i></span>');
     })
   </script>
 </body>
