--- a/widgets/YAMessenger/app/widget.html
+++ b/widgets/YAMessenger/app/widget.html
@@ -1,25 +1,24 @@
 <!doctype html>
 <html lang="en">
-
 <head>
+  <meta name="description" content="Send SMS Text Messages">
+  <meta name="keywords" content="Zoho CRM, Extension, SMS, Telecommunication, Templates">
+  <meta name="author" content="Yashpal Meena [yaxhpal@gmail.com]">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
   <link href="css/sendsms.css" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/caf7cb58ce.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-  </script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
   <script src="js/jquery-dateformat.min.js"></script>
-  <!-- 'MM/dd/yyyy HH:mm:ss a' -->
   <script src="js/ZohoEmbededAppSDK.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/bulksms.js"></script>
-  <script src="js/smscount.js"></script>
+  <script src="js/yamessenger.js"></script>
 </head>
 
 <body class="loading">
@@ -37,18 +36,18 @@
               <option></option>
             </select>
           </label>
-          <label class="col-6 ya-color" for="sms-templates">
-            Template:<br>
-            <select style="width: 100%" class="rounded-0" id="sms-templates" name="SMS Templates">
+          <label class="col-6 ya-color" for="phone-fields">
+            Phone Field:<br>
+            <select style="width: 100%" class="rounded-0" id="phone-fields" name="Phone Field" required>
               <option></option>
             </select>
           </label>
         </div>
         <br>
         <div class="form-row">
-          <label class="col-6 ya-color" for="phone-fields">
-            Phone Field:<br>
-            <select style="width: 100%" class="rounded-0" id="phone-fields" name="Phone Field" required>
+          <label class="col-6 ya-color" for="sms-templates">
+            Template:<br>
+            <select style="width: 100%" class="rounded-0" id="sms-templates" name="SMS Templates">
               <option></option>
             </select>
           </label>
@@ -75,24 +74,24 @@
           API Key: <span id="apikey" class="badge badge-info rounded-0">2dc1579106b1a657080cc51c7efca7e5</span>
         </div>
         <div class="form-row">
-            <div class="col-7"> </div>
-            <div class="col-5"> 
-              <button type="button" class="btn btn-outline-secondary rounded-0" onclick="closePopUp(false)">Cancel</button>
-              <button id="preview-message" class="btn btn-outline-secondary rounded-0">Preview</button>
-              <button type="submit" class="btn btn-success rounded-0">Send <i class="fas fa-angle-right"></i></button>
-            </div>
+          <div class="col-7"> </div>
+          <div class="col-5">
+            <button type="button" class="btn btn-outline-secondary rounded-0" onclick="ZOHO.CRM.UI.Popup.close()">Cancel</button>
+            <button id="preview-message" class="btn btn-outline-secondary rounded-0">Preview</button>
+            <button type="submit" class="btn btn-success rounded-0">Send <i class="fas fa-angle-right"></i></button>
+          </div>
         </div>
         <br>
         <div class="form-row">
-            <div class="col-12">
-              <div id="form-error-alert" class="alert alert-danger alert-dismissible fade show rounded-0" role="alert">
-                  <span id="form-error-message"></span>
-                  <button type="button" class="close-alert close" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
+          <div class="col-12">
+            <div id="form-error-alert" class="alert alert-danger alert-dismissible fade show rounded-0" role="alert">
+              <span id="form-error-message"></span>
+              <button type="button" class="close-alert close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
           </div>
+        </div>
       </div>
     </div>
   </form>
