--- a/widgets/YAMessenger/app/widget.html
+++ b/widgets/YAMessenger/app/widget.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/css/jasny-bootstrap.min.css">
   <link href="css/sendsms.css" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/caf7cb58ce.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/js/jasny-bootstrap.min.js"></script>
   <script src="js/jquery-dateformat.min.js"></script>
   <script src="js/ZohoEmbededAppSDK.min.js"></script>
   <script src="js/utils.js"></script>
@@ -62,10 +64,12 @@
           <div class="col-12">
             <textarea class="form-control bg-light rounded-0" id="message-text" placeholder="Type you message here"
               rows="8" required></textarea>
-            <div id="text-active" class="spinner-grow text-primary spinner-grow-sm invisible" role="status">
-              <span class="sr-only">Loading...</span>
+            <div class="float-right">  
+              <div id="text-active" class="spinner-grow text-primary spinner-grow-sm invisible" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+              <small><b id="smsCount"></b> SMS (<b id="smsLength"></b> Left)</small>
             </div>
-            <small><b id="smsCount"></b> SMS (<b id="smsLength"></b>)</small>
           </div>
         </div>
         <br>
@@ -74,22 +78,35 @@
           API Key: <span id="apikey" class="badge badge-info rounded-0">2dc1579106b1a657080cc51c7efca7e5</span>
         </div>
         <div class="form-row">
-          <div class="col-7"> </div>
+          <div class="col-12">
+            <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+                <div class="form-control fileinput-content rounded-0" data-trigger="fileinput">
+                  <span class="fileinput-filename"></span>
+                </div>
+                <span class="input-group-append">
+                  <span class="input-group-text rounded-0 fileinput-exists rounded-0" data-dismiss="fileinput">&times;</span>
+                  <span class="input-group-text rounded-0 btn-file">
+                    <span class="fileinput-new">Select file</span>
+                    <span class="fileinput-exists">Change</span>
+                    <input type="file" name="..." multiple>
+                  </span>
+                </span>
+            </div>
+          </div>
+        </div><br>        
+        <div class="form-row">
+          <div class="col-7">
+              <div id="form-error-alert" class="alert alert-danger alert-dismissible fade show rounded-0" style="padding: 0.37em 1.25em;" role="alert">
+                <span id="form-error-message"></span>
+                <button type="button" class="close-alert close" aria-label="Close" style="font-size: 1em;padding: 0.5rem 1.25rem;">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+          </div>
           <div class="col-5">
             <button type="button" class="btn btn-outline-secondary rounded-0" onclick="ZOHO.CRM.UI.Popup.close()">Cancel</button>
             <button id="preview-message" class="btn btn-outline-secondary rounded-0">Preview</button>
             <button type="submit" class="btn btn-success rounded-0">Send <i class="fas fa-angle-right"></i></button>
-          </div>
-        </div>
-        <br>
-        <div class="form-row">
-          <div class="col-12">
-            <div id="form-error-alert" class="alert alert-danger alert-dismissible fade show rounded-0" role="alert">
-              <span id="form-error-message"></span>
-              <button type="button" class="close-alert close" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
           </div>
         </div>
       </div>
