--- a/widgets/YAMessenger/app/widget.html
+++ b/widgets/YAMessenger/app/widget.html
@@ -11,11 +11,12 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/css/jasny-bootstrap.min.css">
   <link href="css/sendsms.css" rel="stylesheet">
 
-  <script src="https://kit.fontawesome.com/caf7cb58ce.js" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+  <script src="//kit.fontawesome.com/caf7cb58ce.js" crossorigin="anonymous"></script>
+  <script src="//code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="//cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/js/jasny-bootstrap.min.js"></script>
+  
   <script src="js/jquery-dateformat.min.js"></script>
   <script src="js/ZohoEmbededAppSDK.min.js"></script>
   <script src="js/utils.js"></script>
@@ -29,18 +30,19 @@
       aria-valuenow="2" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
   <form id="message-form">
-    <div class="card border-bottom-0 rounded-0">
+    <div class="row justify-content-end"><i id="settings" class="fas fa-sliders-h"></i></div>
+    <div class="card border-bottom-0 border-top-0 rounded-0">
       <div class="card-body">
         <div class="form-row">
           <label class="col-6 ya-color" for="sms-sender-ids">
             Sender Id:<br>
-            <select style="width: 100%" class="rounded-0" id="sms-sender-ids" name="Sender Ids" required>
+            <select style="width: 100%" class="rounded-0" id="sms-sender-ids" name="SenderId" required>
               <option></option>
             </select>
           </label>
           <label class="col-6 ya-color" for="phone-fields">
             Phone Field:<br>
-            <select style="width: 100%" class="rounded-0" id="phone-fields" name="Phone Field" required>
+            <select style="width: 100%" class="rounded-0" id="phone-fields" name="PhoneField" required>
               <option></option>
             </select>
           </label>
@@ -63,7 +65,7 @@
         <div class="form-row">
           <div class="col-12">
             <textarea class="form-control bg-light rounded-0" id="message-text" placeholder="Type you message here"
-              rows="8" required></textarea>
+              rows="8" name="TextMessage" required></textarea>
             <div class="float-right">  
               <div id="text-active" class="spinner-grow text-primary spinner-grow-sm invisible" role="status">
                 <span class="sr-only">Loading...</span>
@@ -113,24 +115,16 @@
     </div>
   </form>
   <div id="value-cache" class="invisible" style="display: none;"></div>
+  <div id="org-var-modal"></div>
+  <div id="preview-modal"></div>
   <div class="modal_spinner"></div>
-  <div class="modal fade" id="preview-modal" tabindex="-1" role="dialog" aria-labelledby="preview-modal-title"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header" style="padding: .5rem .5rem;">
-          Preview
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body" style="background: darkslategrey; height: 340px; overflow-y: auto;">
-          <div class="chat">
-            <P id="preview-text" class="text-no-wrap">You text preview will <br>be seen here</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <script>
+    $(function(){
+      $("#org-var-modal").load("html/dialogs.html #org-var-modal-src", function(response, status, xhr){
+          $('#save-org-var').click(clickOnSaveOrgVar);
+      });
+      $("#preview-modal").load("html/dialogs.html #preview-modal-src");
+    });
+  </script>
 </body>
 </html>
