[Yashpal] Minor update

--- a/widgets/biginnew/SMSMagicForBigin/app/widget.html
+++ b/widgets/biginnew/SMSMagicForBigin/app/widget.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
-  <script src="js/lib/ZohoEmbededAppSDK.min.js"></script>
+  <script src="https://js.zohocdn.com/biginsdk/dist/js/bigin-widget-sdk.js"></script>
   <script src="js/custom.js"></script>
 </head>
 
