--- a/widgets/biginnew/SMSMagicForBigin/app/settings.html
+++ b/widgets/biginnew/SMSMagicForBigin/app/settings.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta name="description" content="SMS Magic Setting Widget">
-  <meta name="keywords" content="Zoho Bigin, Extension, SMS, Telecommunication, Templates">
+  <meta name="description" content="SMS Magic Zoho Bigin Setting Widget">
+  <meta name="keywords" content="Zoho Bigin, Extension, SMS, Telecommunication, Templates, SMS Magic">
   <meta name="author" content="Yashpal Meena [yaxhpal@gmail.com]">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js" crossorigin="anonymous"></script>
-  <script src="js/lib/ZohoEmbededAppSDK.min.js"></script>
+  <script src="https://js.zohocdn.com/biginsdk/dist/js/bigin-widget-sdk.js"></script>
   <script src="js/custom.js"></script>
 </head>
-
 <body>
   <div class="container mt-5">
     <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
@@ -25,7 +20,6 @@
       <div class="card-body">
         <h5 class="card-title">Record Info (If any)</h5>
         <p id="recordInfo" class="card-text">Records</p>
-
       </div>
     </div>
     <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
@@ -44,5 +38,4 @@
     </div>
   </div>
 </body>
-
 </html>
